// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Textarea /> @renders default 1`] = `
<textarea
  aria-invalid="false"
  class="nel-textarea nel-input"
  data-ref="textarea"
  id="textarea-id"
/>
`;

exports[`<Textarea /> @renders when disabled + with error alert 1`] = `
<textarea
  aria-invalid="true"
  class="nel-textarea nel-input nel-disabledInput nel-errorInput"
  data-ref="textarea"
  disabled=""
  id="textarea-id"
/>
`;

exports[`<Textarea /> @renders when disabled + with warning alert 1`] = `
<textarea
  aria-invalid="true"
  class="nel-textarea nel-input nel-disabledInput nel-warningInput"
  data-ref="textarea"
  disabled=""
  id="textarea-id"
/>
`;

exports[`<Textarea /> @renders when disabled 1`] = `
<textarea
  aria-invalid="false"
  class="nel-textarea nel-input nel-disabledInput"
  data-ref="textarea"
  disabled=""
  id="textarea-id"
/>
`;

exports[`<Textarea /> @renders with className 1`] = `
<textarea
  aria-invalid="false"
  class="nel-textarea nel-input test-textarea"
  data-ref="textarea"
  id="textarea-id"
/>
`;

exports[`<Textarea /> @renders with data-ref + label 1`] = `
<div
  class="nel-fieldControlLabelContainer"
  data-ref="uid.fieldControlLabelContainer"
>
  <label
    class="nel-inputLabel"
    data-ref="uid.fieldControlLabel"
    for="textarea-id"
    id="textarea-idLabel"
  >
    Textarea label
  </label>
  <textarea
    aria-invalid="false"
    class="nel-textarea nel-input"
    data-ref="uid.textarea"
    id="textarea-id"
  />
</div>
`;

exports[`<Textarea /> @renders with data-ref 1`] = `
<textarea
  aria-invalid="false"
  class="nel-textarea nel-input"
  data-ref="uid.textarea"
  id="textarea-id"
/>
`;

exports[`<Textarea /> @renders with error alert 1`] = `
<textarea
  aria-invalid="true"
  class="nel-textarea nel-input nel-errorInput"
  data-ref="textarea"
  id="textarea-id"
/>
`;

exports[`<Textarea /> @renders with label 1`] = `
<div
  class="nel-fieldControlLabelContainer"
  data-ref="fieldControlLabelContainer"
>
  <label
    class="nel-inputLabel"
    data-ref="fieldControlLabel"
    for="textarea-id"
    id="textarea-idLabel"
  >
    Textarea label
  </label>
  <textarea
    aria-invalid="false"
    class="nel-textarea nel-input"
    data-ref="textarea"
    id="textarea-id"
  />
</div>
`;

exports[`<Textarea /> @renders with other props 1`] = `
<textarea
  aria-invalid="false"
  class="nel-textarea nel-input"
  data-custom="custom-value"
  data-ref="textarea"
  id="textarea-id"
/>
`;

exports[`<Textarea /> @renders with warning alert 1`] = `
<textarea
  aria-invalid="true"
  class="nel-textarea nel-input nel-warningInput"
  data-ref="textarea"
  id="textarea-id"
/>
`;
